# ceia_analisis_datos

./: .pre-commit-config.yaml  EDA - Airbnb.pptx  README.md  pyproject.toml  slides.md  tp.ipynb
.ipynb_checkpoints/: tp-checkpoint.ipynb
