[project]
name = "tp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.30.1",
    "numpy>=1.26.4,<2.0.0",
    "pandas>=2.2.2,<3.0.0",
    "scikit-learn>=1.5.0,<2.0.0",
    "scipy>=1.13.1,<2.0.0",
    "torch>=2.3.0,<3.0.0",
    "torchvision>=0.18.0,<1.0.0",
    "matplotlib>=3.9.0,<4.0.0",
    "seaborn>=0.13.2,<1.0.0",
    "optuna>=3.6.1,<4.0.0",
    "jupyter>=1.0.0,<2.0.0",
    "xgboost>=2.0.3,<3.0.0",
    "pillow>=10.3.0,<11.0.0",
    "wandb>=0.21.3",
    "missingno>=0.5.2",
]
